--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>JS Homework 4</title>
+    <title>JS Homework 5</title>
   </head>
   <body>
     <script src="js/task1.js" type="module"></script>
-    <script src="js/task2.js" type="module"></script>
+    <!-- <script src="js/task2.js" type="module"></script> -->
+    <!-- <script src="js/task3.js" type="module"></script> -->
+    <!-- <script src="js/task4.js" type="module"></script> -->
+    <!-- <script src="js/task5.js" type="module"></script> -->
   </body>
 </html>
